# GameOfLife

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  requirements.sh
src/: ContainerOfBlocks.cpp  agent.cpp  agent.hpp  app.cpp  app.hpp  block.cpp  block.h  blockContainer.h  main.cpp
